Taxes paid alignment issue resolved

--- a/src/app/modules/itr-filing/itr-wizard/components/tds-other-than-salary/tds-other-than-salary.component.scss
+++ b/src/app/modules/itr-filing/itr-wizard/components/tds-other-than-salary/tds-other-than-salary.component.scss
@@ -107,3 +107,7 @@
 .form-field{
     margin-left:10px;
   }
+
+  .spcAbv {  
+    margin-top: 20px!important;
+}
