--- a/src/app/modules/itr-filing/itr-wizard/pages/taxes-paid/taxes-paid.component.scss
+++ b/src/app/modules/itr-filing/itr-wizard/pages/taxes-paid/taxes-paid.component.scss
@@ -161,6 +161,11 @@ tr:nth-child(even) {
   color: #1E1E1E;
 }
 
+.fullBox{
+  position: relative;
+  top: -40px;
+}
+
 .Bx4R{
   float: right;
   border-radius: 5px;
